homepage and drop menu done

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,19 +7,12 @@ nav{
   padding-bottom: 15px;
   align-items: center;
   text-shadow: -3px -3px 4px rgba(26, 26, 26, .2);   
-  width: 96%;
-  max-width: 1047px;
+ // max-width: 1440px;
   margin: auto;
-  z-index: -1;
-  
-
-  &:hover{
-    text-shadow: -3px -3px 4px rgba(26, 26, 26, .5);
-  }
 
   h1{
     color: @white;
-    font-size: 3.2rem;
+    font-size: 2.3rem;
     font-weight: bold;
     margin-left: 60px;
     margin-top: 10px;
@@ -68,6 +61,7 @@ ul{
   background: @navbargray;
   color: @white;
   opacity: .95;
+    z-index: 1;
 
 }
 
@@ -98,8 +92,6 @@ ul{
   img{
     margin-right: 87px;
     margin-top: 10px;
-   
-
   }
 }
 
