--- a/less/variables.less
+++ b/less/variables.less
@@ -3,7 +3,7 @@
 @charcoal: #222222;
 @silver:#D8D8D8;
 @powderblue:#5E9FB9;
-@gray:#99a5af;
+@gray:#9BADB4;
 @leather:#514537;
 
 
@@ -14,5 +14,5 @@
 @hoverbn:@white;
 @navbargray:@gray;
 @navbarbrown:@leather;
-
+@footergray:#7F7F7F;
 
