--- a/less/global.less
+++ b/less/global.less
@@ -1,8 +1,12 @@
 html{
   font-family: Roboto, Arial, sans-serif;
   font-size: 62.5%;
+  max-width: 1240px;
+  margin: auto;
 }
 
 body{
   font-size: 1.6rem;
+  
+
 }
