--- a/css/index.css
+++ b/css/index.css
@@ -137,7 +137,7 @@ table {
 html {
   font-family: Roboto, Arial, sans-serif;
   font-size: 62.5%;
-  max-width: 1240px;
+  max-width: 1040px;
   margin: auto;
 }
 body {
@@ -158,15 +158,16 @@ nav h1 {
   color: #FFFFFF;
   font-size: 2.3rem;
   font-weight: bold;
-  margin-left: 60px;
-  margin-top: 10px;
+  margin-left: 68px;
+  margin-top: 12px;
 }
 nav h1 a {
   text-decoration: none;
   color: #FFFFFF;
 }
 nav img {
-  margin-right: 70px;
+  margin-right: 78px;
+  margin-top: 3px;
 }
 ul li {
   font-size: 6rem;
@@ -207,7 +208,7 @@ ul a:hover {
   opacity: 1;
 }
 .dropsj h6 {
-  font-size: 3.2rem;
+  font-size: 2.3rem;
   font-weight: bold;
   margin-left: 78px;
   margin-top: 10px;
@@ -240,6 +241,7 @@ footer {
   padding-left: 5rem;
   padding-right: 5rem;
   margin-bottom: 0;
+  border-top: #222222 1px solid;
 }
 footer h5 {
   font-size: 2rem;
@@ -272,20 +274,11 @@ footer p {
 }
 .billboard {
   background-image: url("../img/home/home-jumbotron.png");
-  height: 700px;
+  height: 650px;
   background-attachment: fixed;
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
-}
-.billboard img {
-  width: 100%;
-}
-.billboard .big {
-  position: absolute;
-  top: 350px;
-  left: 16px;
-  text-shadow: -3px -3px 4px rgba(0, 0, 0, 0.9);
 }
 .billboard ul {
   display: flex;
@@ -294,6 +287,17 @@ footer p {
   font-weight: bold;
   color: #FFFFFF;
   margin-top: 30%;
+}
+.big {
+  margin: auto;
+  position: relative;
+  height: 20px;
+  text-shadow: -3px -3px 4px rgba(0, 0, 0, 0.9);
+}
+.big ul {
+  position: absolute;
+  bottom: 100px;
+  color: #FFFFFF;
 }
 .fadein {
   animation: animationFrames ease 2s;
@@ -494,4 +498,69 @@ footer p {
   .billboard {
     background-attachment: scroll;
   }
+}
+.servboard {
+  position: relative;
+}
+.servboard img {
+  width: 100%;
+}
+.servboard .big {
+  text-shadow: -3px -3px 4px rgba(0, 0, 0, 0.9);
+  font-size: 5rem;
+  font-weight: bold;
+  color: #FFFFFF;
+  position: absolute;
+  bottom: 25%;
+  left: 10%;
+}
+.servboard .big h4 {
+  font-size: 6.4rem;
+  font-weight: bold;
+  color: #FFFFFF;
+}
+.services {
+  width: 85%;
+  margin: auto;
+  margin-bottom: 45px;
+  margin-top: 40px;
+}
+.services p {
+  line-height: 2.5rem;
+  font-weight: 480;
+  font-size: 1.75rem;
+}
+.services .service {
+  padding-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  font-size: 1.8rem;
+  padding-bottom: 50px;
+}
+.services .service .tab {
+  border: black 1px solid;
+  padding: 15px;
+  width: 150px;
+  text-align: center;
+}
+.services .card {
+  display: none;
+  margin-bottom: 40px;
+}
+.services .card .title {
+  font-weight: bold;
+  font-size: 2.1rem;
+  margin-bottom: 20px;
+}
+.services .card .img-container {
+  margin-top: 40px;
+}
+.services .on {
+  display: flex;
+}
+.services .active {
+  background: #5E9FB9;
+  color: #FFFFFF;
+  text-shadow: -1px -2px 0px rgba(0, 0, 0, 0.3);
 }
