--- a/less/footer.less
+++ b/less/footer.less
@@ -6,6 +6,7 @@ footer{
   padding-left: 5rem;
   padding-right: 5rem;
   margin-bottom: 0;
+  border-top: @charcoal 1px solid;
   h5{
     font-size: 2rem;
     font-weight: bold;
