--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,31 +1,30 @@
 
 .billboard{
   background-image: url("../img/home/home-jumbotron.png");
-  height: 650px;
+  height: 580px;
   background-attachment: fixed;
   background-position: top;
   background-repeat: no-repeat;
-  background-size: cover; 
- 
-   ul{
-     display: flex;
-     flex-direction: column;
-     font-size: 6.4rem;
-     font-weight: bold;
-     color: @white;
-     margin-top: 30%;
-   }
+  background-size: 1040px; 
+  margin-bottom: 0;
  }
  
  .big{
+ //  border: red 1px solid;
    margin: auto;
   position: relative;
-  height: 20px;
+  height: 0px;
+  margin-top: 20px;
   text-shadow: -3px -3px 4px rgba(0, 0, 0, .9);
-  ul{
+  p{
     position: absolute;
-    bottom: 100px;
+    bottom: 200px;
    color: @white;
+   bottom: 100px;
+   left: 30px;
+   line-height: 7.1rem;
+   font-size: 7.1rem;
+   font-weight: bold;
   }
 }
  
@@ -117,7 +116,7 @@
      background: @silver;
      color: @charcoal;
      padding: 25px;
-     font-size: 2rem;
+     font-size: 2.3rem;
      letter-spacing: .8rem;
      text-align: center;
      position: relative;
@@ -158,9 +157,10 @@
      }
  
      .button{
+       cursor: pointer;
        border: @charcoal 1px solid;
        padding: 8px;
-       width: 25%;
+       width: 40%;
        text-align: center;
        font-size: .9em;
        box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.7);
@@ -185,12 +185,17 @@
        width: 90%;
        z-index: -1;
      }
+     .large{
+
+     }
+     .small{
+       display: none;
+     }
      .villa{
        position: absolute;
        bottom: -30px;
        right: 47px;
-       width: 33%;
-       background: pink;
+       width: 39%;
      }
    }
  
@@ -216,6 +221,10 @@
        width: 90%;
        z-index: -1;
      }
+   
+    .small{
+      display: none;
+    }
      .outskirt{
        position: absolute;
        bottom: -30px;
@@ -233,6 +242,9 @@
        width: 90%;
        z-index: -1;
      }
+     .small{
+      display: none;
+     }
      .block{
        position: absolute;
        bottom: -30px;
@@ -241,10 +253,473 @@
      }
    }
  
-   @media(max-width: 1000px) {
+   @media(max-width: 900px) {
+    .billboard {
+      background-attachment: scroll;
+      height: 500px;
+      background-size: 100%; 
+    }
+
+  .row1{
+    margin-top: 10px;
+  }
+  .row2{
+    margin-top: 10px;
+  }
+
+    footer{
+      margin: 0;
+      padding: 20px;
+
+    .container{
+      display: flex;
+      flex-direction: column;
+      margin: auto;
+      padding: 0;
+      .form{
+        width: 100%;
+        margin: auto;
+        margin-left: 20px;
+      margin-bottom: 10px;
+      line-height: 2.3rem;
+      h5{
+        margin-bottom: 10px;
+      }
+      input{
+        font-size: 1.6rem;
+      }
+      }
+      .smallbox{
+        width: 100%;
+        margin-top: 10px;
+      }
+    }
+  }
+}
+
+
+  @media(max-width: 800px) {
+    .billboard {
+      background-attachment: scroll;
+      height: 450px;
+      background-size: 100%; 
+    }
+
+    .big{
+    // border: red 1px solid;
+     margin: auto;
+    position: relative;
+    height: 0px;
+    margin-top: 0;
+    text-shadow: -3px -3px 4px rgba(0, 0, 0, .9);
+    p{
+      position: absolute;
+      bottom: 200px;
+     color: @white;
+     bottom: 100px;
+     left: 30px;
+     font-size: 4.8rem;
+     line-height: 4.8rem;
+     font-weight: bold;
+    }
+  }
+
+    .villas{
+      position: relative;
+      text-align: center;
+      margin-bottom: 80px;
+      img{
+        width: 90%;
+        z-index: -1;
+      }
+      .large{
+ 
+      }
+      .small{
+        display: none;
+      }
+      .villa{
+        position: absolute;
+        bottom: -30px;
+        right: 47px;
+        width: 39%;
+      }
+  }
+}
+
+  @media(max-width: 700px) {
+    .billboard {
+      background-attachment: scroll;
+      height: 350px;
+      background-size: 100%; 
+    }
+
+    .big{
+      // border: red 1px solid;
+       margin: auto;
+      position: relative;
+      height: 0px;
+      margin-top: 0;
+      text-shadow: -3px -3px 4px rgba(0, 0, 0, .9);
+      p{
+        position: absolute;
+        bottom: 200px;
+       color: @white;
+       bottom: 100px;
+       left: 30px;
+       font-size: 4.2rem;
+       line-height: 4.2rem;
+       font-weight: bold;
+      }
+    }
+
+    .box{
+      width: 90%;
+      margin: auto;
+    }
+
+    
+.row1{
+  width: 100%;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+
+  .button{
+    width: 95%;
+    margin: auto;
+    font-size: 1.2em;
+  }
+
+}
+
+.row2{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 60px;
+
+  .button{
+    width: 95%;
+    margin: auto;
+    font-size: 1.2em;
+  }
+}
+
+.villas{
+  position: relative;
+  text-align: center;
+  margin-bottom: 80px;
+  img{
+    width: 85%;
+    z-index: -1;
+  }
+  .large{
+    display: none;
+  }
+  .small{
+    display: block;
+    margin: auto;
+  }
+  .villa{
+    position: absolute;
+    bottom: -55px;
+    right: 75px;
+    width: 75%;
+    font-size: 3rem;
+  }
+}
+
+.outskirts{
+  position: relative;
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 85px;
+  img{
+    width: 90%;
+    z-index: -1;
+  }
+  .large{
+    display: none;
+ }
+ .small{
+  display: block;
+    margin: auto;
+ }
+  .outskirt{
+    position: absolute;
+    bottom: -30px;
+    left: 80px;
+    width: 75%;
+  }
+}
+
+.blocks{
+  position: relative;
+  text-align: center;
+  margin-top: 120px;
+  margin-bottom: 85px;
+  img{
+    width: 90%;
+    z-index: -1;
+  }
+
+  .large{
+    display: none;
+ }
+ .small{
+  display: block;
+    margin: auto;
+ }
+
+  .block{
+    position: absolute;
+    bottom: -30px;
+    right: 75px;
+    width: 75%;
+  }
+
+  
+}
+
+.blurb{
+  width: 75%;
+  margin: auto;
+  text-align: left;
+  margin-top: 50px;
+  p{
+    margin-bottom: 30px;
+    font-size: 1.7rem;
+    line-height: 2.3rem;
+    font-weight: 500;
+  }
+}
+
+  }
+
+   @media(max-width: 600px) {
      .billboard {
        background-attachment: scroll;
+       height: 340px;
+       background-size: 100%; 
+     }
+
+     .big{
+     // border: red 1px solid;
+      margin: auto;
+     position: relative;
+     height: 0px;
+     margin-top: 0;
+     text-shadow: -3px -3px 4px rgba(0, 0, 0, .9);
+     p{
+       position: absolute;
+       bottom: 200px;
+      color: @white;
+      bottom: 100px;
+      left: 30px;
+      font-size: 4.2rem;
+      line-height: 4.2rem;
+      font-weight: bold;
      }
    }
 
- 
+   }
+
+   @media(max-width: 600px) {
+    .billboard {
+      background-attachment: scroll;
+      height: 320px;
+      background-size: 100%; 
+    }
+
+    .big{
+      //  border: red 1px solid;
+        margin: auto;
+       position: relative;
+       height: 0px;
+       margin-top: 20px;
+       text-shadow: -3px -3px 4px rgba(0, 0, 0, .9);
+       p{
+         position: absolute;
+         bottom: 200px;
+        color: @white;
+        font-size: 4rem;
+        line-height: 4rem;
+        bottom: 130px;
+        left: 30px;
+       }
+      }
+}
+
+   @media(max-width: 500px) {
+
+    .billboard{
+      height: 300px;
+      background-size: 100%;
+     }
+
+     .big{
+      //  border: red 1px solid;
+        margin: auto;
+       position: relative;
+       height: 0px;
+       margin-top: 20px;
+       text-shadow: -3px -3px 4px rgba(0, 0, 0, .9);
+       p{
+         position: absolute;
+         bottom: 200px;
+        color: @white;
+        font-size: 4rem;
+        line-height: 4rem;
+        bottom: 130px;
+        left: 30px;
+       }
+      }
+  }
+
+   @media(max-width: 400px){
+
+    .billboard {
+      background-attachment: scroll;
+      height: 230px;
+      background-size: 100%; 
+    }
+
+    .big{
+      //  border: red 1px solid;
+        margin: auto;
+       position: relative;
+       height: 0px;
+       margin-top: 20px;
+       text-shadow: -3px -3px 4px rgba(0, 0, 0, .9);
+       p{
+         position: absolute;
+         bottom: 200px;
+        color: @white;
+        font-size: 4rem;
+        line-height: 4rem;
+        bottom: 80px;
+        left: 30px;
+       }
+      }
+    .box{
+      width: 90%;
+      margin: auto;
+    }
+
+    
+.row1{
+  width: 100%;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+
+  .button{
+    width: 95%;
+    margin: auto;
+    font-size: 1.2em;
+  }
+}
+
+.row2{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 60px;
+
+  .button{
+    width: 95%;
+    margin: auto;
+    font-size: 1.2em;
+  }
+}
+
+.villas{
+  position: relative;
+  text-align: center;
+  margin-bottom: 80px;
+  img{
+    width: 85%;
+    z-index: -1;
+  }
+  .large{
+    display: none;
+  }
+  .small{
+    display: block;
+    margin: auto;
+  }
+  .villa{
+    position: absolute;
+    bottom: -55px;
+    right: 45px;
+    width: 75%;
+    font-size: 3rem;
+  }
+}
+
+.outskirts{
+  position: relative;
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 85px;
+  img{
+    width: 90%;
+    z-index: -1;
+  }
+  .large{
+    display: none;
+ }
+ .small{
+  display: block;
+    margin: auto;
+ }
+  .outskirt{
+    position: absolute;
+    bottom: -30px;
+    left: 45px;
+    width: 75%;
+  }
+}
+
+.blocks{
+  position: relative;
+  text-align: center;
+  margin-top: 120px;
+  margin-bottom: 85px;
+  img{
+    width: 90%;
+    z-index: -1;
+  }
+
+  .large{
+    display: none;
+ }
+ .small{
+  display: block;
+    margin: auto;
+ }
+
+  .block{
+    position: absolute;
+    bottom: -30px;
+    right: 45px;
+    width: 75%;
+  } 
+}
+
+.blurb{
+  width: 75%;
+  margin: auto;
+  text-align: left;
+  margin-top: 50px;
+  p{
+    margin-bottom: 30px;
+    font-size: 1.7rem;
+    line-height: 2.3rem;
+    font-weight: 500;
+    }
+  }
+}
