--- a/less/services.less
+++ b/less/services.less
@@ -11,7 +11,7 @@
       font-weight: bold;
       color: @white;
       position:absolute;
-      bottom: 25%;
+      bottom: 80px;
       left: 10%;
       h4{
         font-size: 6.4rem;
@@ -45,6 +45,10 @@
     padding: 15px;
     width: 150px;
     text-align: center;
+    cursor: pointer;
+    &:hover{
+      box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.7);
+    }
   }
 }
 
@@ -76,6 +80,40 @@
   color: @white;
   text-shadow: -1px -2px 0px rgba(0, 0, 0, .3);
 }
+
+@media(max-width: 900px){
+
+  .service{
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 50px;
+
+    .tab{
+      border: black 1px solid;
+      padding: 15px;
+      width: 90%;
+      margin: auto;
+      text-align: center;
+    }
+  } 
+
+  .card{
+ flex-direction: column;
+ width: 100%;
+ justify-content: center;
+
+ img{
+   width: 100%;
+   
+ }
+  }
+
+
+}
+
+
 
 }
 
