about us stretch

--- a/less/about.less
+++ b/less/about.less
@@ -1,4 +1,4 @@
-.contactboard{
+.aboutboard{
   position: relative;
   
   img{
@@ -7,6 +7,7 @@
 
    .big{
      text-shadow: -3px -3px 4px rgba(0, 0, 0, .9);
+     border: red 1px solid;
       font-size: 5rem;
       font-weight: bold;
       color: @white;
@@ -21,7 +22,7 @@
    }
  }
 
- .contact{
+ .about{
 
   h3{
     color: @charcoal;
