--- a/less/footer.less
+++ b/less/footer.less
@@ -43,3 +43,33 @@ footer{
 .newyork{
 
 }
+
+@media(max-width: 800px){footer{
+  margin: 0;
+  padding: 20px;
+
+.container{
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  padding: 0;
+  .form{
+    width: 100%;
+    margin: auto;
+    margin-left: 20px;
+  margin-bottom: 10px;
+  line-height: 2.3rem;
+  h5{
+    margin-bottom: 10px;
+  }
+  input{
+    font-size: 1.6rem;
+  }
+  }
+  .smallbox{
+    width: 100%;
+    margin-top: 10px;
+    }
+  }
+}
+}
