--- a/less/home-page.less
+++ b/less/home-page.less
@@ -267,34 +267,7 @@
     margin-top: 10px;
   }
 
-    footer{
-      margin: 0;
-      padding: 20px;
-
-    .container{
-      display: flex;
-      flex-direction: column;
-      margin: auto;
-      padding: 0;
-      .form{
-        width: 100%;
-        margin: auto;
-        margin-left: 20px;
-      margin-bottom: 10px;
-      line-height: 2.3rem;
-      h5{
-        margin-bottom: 10px;
-      }
-      input{
-        font-size: 1.6rem;
-      }
-      }
-      .smallbox{
-        width: 100%;
-        margin-top: 10px;
-      }
-    }
-  }
+   
 }
 
 
@@ -550,6 +523,83 @@
         left: 30px;
        }
       }
+
+
+      .villas{
+        position: relative;
+        text-align: center;
+        margin-bottom: 80px;
+        img{
+          width: 85%;
+          z-index: -1;
+        }
+        .large{
+          display: none;
+        }
+        .small{
+          display: block;
+          margin: auto;
+        }
+        .villa{
+          position: absolute;
+          bottom: -55px;
+          right: 65px;
+          width: 75%;
+          font-size: 3rem;
+        }
+      }
+      
+      .outskirts{
+        position: relative;
+        text-align: center;
+        margin-top: 100px;
+        margin-bottom: 85px;
+        img{
+          width: 90%;
+          z-index: -1;
+        }
+        .large{
+          display: none;
+       }
+       .small{
+        display: block;
+          margin: auto;
+       }
+        .outskirt{
+          position: absolute;
+          bottom: -30px;
+          left: 65px;
+          width: 75%;
+        }
+      }
+      
+      .blocks{
+        position: relative;
+        text-align: center;
+        margin-top: 120px;
+        margin-bottom: 85px;
+        img{
+          width: 90%;
+          z-index: -1;
+        }
+      
+        .large{
+          display: none;
+       }
+       .small{
+        display: block;
+          margin: auto;
+       }
+      
+        .block{
+          position: absolute;
+          bottom: -30px;
+          right: 65px;
+          width: 75%;
+        }
+      
+        
+      }
 }
 
    @media(max-width: 500px) {
@@ -576,6 +626,85 @@
         left: 30px;
        }
       }
+
+
+      .villas{
+        position: relative;
+        text-align: center;
+        margin-bottom: 80px;
+        img{
+          width: 85%;
+          z-index: -1;
+        }
+        .large{
+          display: none;
+        }
+        .small{
+          display: block;
+          margin: auto;
+        }
+        .villa{
+          position: absolute;
+          bottom: -55px;
+          right: 55px;
+          width: 75%;
+          font-size: 3rem;
+        }
+      }
+      
+      .outskirts{
+        position: relative;
+        text-align: center;
+        margin-top: 100px;
+        margin-bottom: 85px;
+        img{
+          width: 90%;
+          z-index: -1;
+        }
+        .large{
+          display: none;
+       }
+       .small{
+        display: block;
+          margin: auto;
+       }
+        .outskirt{
+          position: absolute;
+          bottom: -30px;
+          left: 55px;
+          width: 75%;
+        }
+      }
+      
+      .blocks{
+        position: relative;
+        text-align: center;
+        margin-top: 120px;
+        margin-bottom: 85px;
+        img{
+          width: 90%;
+          z-index: -1;
+        }
+      
+        .large{
+          display: none;
+       }
+       .small{
+        display: block;
+          margin: auto;
+       }
+      
+        .block{
+          position: absolute;
+          bottom: -30px;
+          right: 56px;
+          width: 75%;
+        }
+      
+        
+      }
+
+
   }
 
    @media(max-width: 400px){
