--- a/css/index.css
+++ b/css/index.css
@@ -272,6 +272,35 @@ footer p {
   line-height: 2rem;
   margin-top: 0;
 }
+@media (max-width: 800px) {
+  footer {
+    margin: 0;
+    padding: 20px;
+  }
+  footer .container {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    padding: 0;
+  }
+  footer .container .form {
+    width: 100%;
+    margin: auto;
+    margin-left: 20px;
+    margin-bottom: 10px;
+    line-height: 2.3rem;
+  }
+  footer .container .form h5 {
+    margin-bottom: 10px;
+  }
+  footer .container .form input {
+    font-size: 1.6rem;
+  }
+  footer .container .smallbox {
+    width: 100%;
+    margin-top: 10px;
+  }
+}
 .billboard {
   background-image: url("../img/home/home-jumbotron.png");
   height: 580px;
@@ -514,33 +543,6 @@ footer p {
   .row2 {
     margin-top: 10px;
   }
-  footer {
-    margin: 0;
-    padding: 20px;
-  }
-  footer .container {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    padding: 0;
-  }
-  footer .container .form {
-    width: 100%;
-    margin: auto;
-    margin-left: 20px;
-    margin-bottom: 10px;
-    line-height: 2.3rem;
-  }
-  footer .container .form h5 {
-    margin-bottom: 10px;
-  }
-  footer .container .form input {
-    font-size: 1.6rem;
-  }
-  footer .container .smallbox {
-    width: 100%;
-    margin-top: 10px;
-  }
 }
 @media (max-width: 800px) {
   .billboard {
@@ -762,6 +764,75 @@ footer p {
     bottom: 130px;
     left: 30px;
   }
+  .villas {
+    position: relative;
+    text-align: center;
+    margin-bottom: 80px;
+  }
+  .villas img {
+    width: 85%;
+    z-index: -1;
+  }
+  .villas .large {
+    display: none;
+  }
+  .villas .small {
+    display: block;
+    margin: auto;
+  }
+  .villas .villa {
+    position: absolute;
+    bottom: -55px;
+    right: 65px;
+    width: 75%;
+    font-size: 3rem;
+  }
+  .outskirts {
+    position: relative;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 85px;
+  }
+  .outskirts img {
+    width: 90%;
+    z-index: -1;
+  }
+  .outskirts .large {
+    display: none;
+  }
+  .outskirts .small {
+    display: block;
+    margin: auto;
+  }
+  .outskirts .outskirt {
+    position: absolute;
+    bottom: -30px;
+    left: 65px;
+    width: 75%;
+  }
+  .blocks {
+    position: relative;
+    text-align: center;
+    margin-top: 120px;
+    margin-bottom: 85px;
+  }
+  .blocks img {
+    width: 90%;
+    z-index: -1;
+  }
+  .blocks .large {
+    display: none;
+  }
+  .blocks .small {
+    display: block;
+    margin: auto;
+  }
+  .blocks .block {
+    position: absolute;
+    bottom: -30px;
+    right: 65px;
+    width: 75%;
+  }
 }
 @media (max-width: 500px) {
   .billboard {
@@ -783,6 +854,75 @@ footer p {
     line-height: 4rem;
     bottom: 130px;
     left: 30px;
+  }
+  .villas {
+    position: relative;
+    text-align: center;
+    margin-bottom: 80px;
+  }
+  .villas img {
+    width: 85%;
+    z-index: -1;
+  }
+  .villas .large {
+    display: none;
+  }
+  .villas .small {
+    display: block;
+    margin: auto;
+  }
+  .villas .villa {
+    position: absolute;
+    bottom: -55px;
+    right: 55px;
+    width: 75%;
+    font-size: 3rem;
+  }
+  .outskirts {
+    position: relative;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 85px;
+  }
+  .outskirts img {
+    width: 90%;
+    z-index: -1;
+  }
+  .outskirts .large {
+    display: none;
+  }
+  .outskirts .small {
+    display: block;
+    margin: auto;
+  }
+  .outskirts .outskirt {
+    position: absolute;
+    bottom: -30px;
+    left: 55px;
+    width: 75%;
+  }
+  .blocks {
+    position: relative;
+    text-align: center;
+    margin-top: 120px;
+    margin-bottom: 85px;
+  }
+  .blocks img {
+    width: 90%;
+    z-index: -1;
+  }
+  .blocks .large {
+    display: none;
+  }
+  .blocks .small {
+    display: block;
+    margin: auto;
+  }
+  .blocks .block {
+    position: absolute;
+    bottom: -30px;
+    right: 56px;
+    width: 75%;
   }
 }
 @media (max-width: 400px) {
@@ -1035,6 +1175,49 @@ footer p {
   font-weight: 1000;
   margin-top: 50px;
 }
+.contact .form {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  background: #9BADB4;
+  padding: 20px;
+  border-radius: 5px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+  opacity: 0.8;
+}
+.contact .form h3 {
+  margin: auto;
+  margin-top: 15px;
+}
+.contact .form p {
+  margin: 5px;
+  margin-top: 10px;
+}
+.contact .form form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.contact .form form input {
+  width: 92%;
+}
+.contact .form form textarea {
+  font-family: Roboto, Arial, sans-serif;
+  font-size: 16px;
+  width: 98%;
+}
+.contact .form form button {
+  margin: auto;
+  width: 30%;
+  margin-top: 20px;
+  font-size: 1.5rem;
+  height: 30px;
+  border-radius: 3px;
+}
 .contact .locations {
   display: flex;
   margin-bottom: 20px;
@@ -1056,43 +1239,59 @@ footer p {
   font-size: 1.5rem;
   color: #9BADB4;
 }
-.contact .form {
-  display: flex;
-  flex-direction: column;
-  width: 70%;
-  margin: auto;
-  background: #9BADB4;
-  padding: 15px;
-  border-radius: 5px;
-  margin-bottom: 30px;
-  margin-top: 30px;
+@media (max-width: 700px) {
+  .contact .locations {
+    display: flex;
+    flex-direction: column;
+  }
+  .contact .locations .spot {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 70%;
+    margin-bottom: 15px;
+  }
+  .contact .locations .spot img {
+    width: 100%;
+    height: 230px;
+    margin: auto;
+  }
 }
-.contact .form h3 {
-  margin: auto;
-  margin-top: 15px;
-}
-.contact .form form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-.contact .form form textarea {
-  font-family: Roboto, Arial, sans-serif;
-  font-size: 16px;
-  width: 100%;
-}
-.contact input {
-  margin: auto;
-  margin-top: 10px;
-  width: 95%;
-}
-.contact button {
-  margin: auto;
-  width: 30%;
-  margin-top: 20px;
-  font-size: 1.5rem;
-  height: 30px;
-  border-radius: 3px;
+@media (max-width: 500px) {
+  .contact .form {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background: #9BADB4;
+    padding: 15px;
+    border-radius: 0;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    opacity: 0.8;
+  }
+  .contact .form form {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 95%;
+  }
+  .contact .locations {
+    display: flex;
+    flex-direction: column;
+  }
+  .contact .locations .spot {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .contact .locations .spot img {
+    width: 100%;
+    height: 230px;
+    margin: auto;
+  }
+  .contact .locations .spot .address {
+    padding-left: 5px;
+  }
 }
