--- a/less/about.less
+++ b/less/about.less
@@ -1,5 +1,5 @@
 .aboutboard{
-  position: relative;
+  
   
   img{
       width: 100%
@@ -23,153 +23,143 @@
  }
 
  .about{
-
-  h3{
-    color: @charcoal;
-    font-size: 2.5rem;
-    font-weight: 1000;
-    margin-top: 50px;
-  }
-
-  .form{
-    margin: auto;
+margin-top: 25px;
+  .company{
     display: flex;
-    flex-direction: column;
-    width: 80%;
-   background: @navbargray;
-   padding: 20px;
-   border-radius: 5px;
-   margin-bottom: 30px;
-   margin-top: 30px;
-   opacity: .8;
-   
-   h3{
-      margin: auto;
-      margin-top: 15px;
-    }
-
-    p{
-      margin: 5px;
-      margin-top: 10px;
-    }
- 
-    form{
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-      margin-top: 20px;
-      margin-bottom: 20px;
-
-      input{
-        width: 92%;
-      }
-
-      textarea{
-       font-family: Roboto, Arial, sans-serif;
-       font-size: 16px;
-       width: 98%;
-      }
-
-      button{
-        margin: auto;
-        width: 30%;
-        margin-top: 20px;
-        font-size: 1.5rem;
-        height: 30px;
-        border-radius: 3px;
-      }
-     }
-    }
- 
+    flex-direction: row;
+    justify-content: center;
     
-  .locations{
-  display: flex;
-  margin-bottom: 20px;
-  }
 
-  .spot{
-    width: 33%;
-    margin: auto;
- 
-    img{
-      width: 100%;
-      height: 200px;
-       }
-   h4{
-     font-weight: bold;
-     font-size: 2rem;
-     margin-bottom: 5px;
+    .aboutcomp{
+      width: 500px;
+      margin: 10px;
+      h2{
+        margin-top: 10px;
+        font-weight: bold;
+      }
+      p{
+        margin-top: 10px;
+        line-height: 1.8rem;
+      }
     }
-    p{
-    font-size: 1.5rem;
-    color: @gray;
-   }
- }
+    .picture{
+      width: 520px;
+      margin: 10px;
+      img{
+        width: 100%;
+        height: 270px;
+      }
+    }
 
-   @media(max-width: 700px){
-    .locations{
+   }
+
+   h3{
+     margin-top: 50px;
+     font-size: 3rem;
+     margin-left: 25px;
+     font-weight: bold;
+   }
+
+   .team{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 30px;
+    margin-bottom: 40px;
+    margin-right: 10px;
+
+    .member{
+      padding: 15px;
+      border: @gray 1px solid;
+      height: 200px;
+      width: 285px; 
+      background: @gray;
+      margin: 10px;
+
+      h5{
+        font-weight: bold;
+      }
+      
+      p{
+        margin-top: 5px;
+        color: @leather;
+      }
+      .links{
+        margin-top: 20px;
+        p{
+          margin-top: 8px;
+          color: @charcoal;
+          cursor: pointer;
+          &:hover{
+            text-decoration: underline;
+          }
+        }
+        
+      }
+      .media{
+        margin-top: 55px;
+        width: 90%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        font-size: 3rem;
+        color: @charcoal;
+        i{
+          cursor: pointer;
+          &:hover{
+            text-shadow: -1px -2px 3px rgba(216, 216, 7216, .9);
+          }
+        }
+      }
+      
+      img{
+        position: relative;
+        bottom: 210px;
+        left: 155px;
+        width: 153px;
+        height: 170px;
+        opacity: .9;
+      }
+      
+    }
+
+   }
+    
+
+
+   @media(max-width: 800px){
+    .company{
       display: flex;
       flex-direction: column;
+      justify-content: center;
+      
+      .aboutcomp{
+        width: 95%;
+        margin: auto;
+      }
+      .picture{
+        width: 95%;
+        margin: auto;
+        img{
+          width: 100%;
+        }
+      }
+     }
 
-      .spot{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 70%;
-        margin-bottom: 15px;
-         img{
-           width: 100%;
-          height: 230px;
-          margin: auto; 
-         }
-       }
-    }
+
+     //end media
   }
+
+ 
 
   @media(max-width: 500px){
     
-    .form{
-      margin: auto;
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-     background: @navbargray;
-     padding: 15px;
-     border-radius: 0;
-     margin-bottom: 30px;
-     margin-top: 30px;
-     opacity: .8;
 
-     form{
-       margin-top: 20px;
-       margin-bottom: 20px;
-       width: 95%;
-     }
-    }
-    
-    .locations{
-      display: flex;
-      flex-direction: column;
 
-      .spot{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 100%;
-        margin-bottom: 15px;
-         img{
-           width: 100%;
-          height: 230px;
-          margin: auto; 
-         }
-         .address{
-           margin-left
-         }
-       }
-    }
+  //end media
   }
 
 
 
+  //end of .about
 }
- 
