--- a/less/contact.less
+++ b/less/contact.less
@@ -2,7 +2,8 @@
   position: relative;
   
   img{
-      width: 100%
+      width: 100%;
+      margin-top:30px;
     }
 
    .big{
@@ -76,6 +77,9 @@
         font-size: 1.5rem;
         height: 30px;
         border-radius: 3px;
+        &:hover{
+          cursor: pointer;
+        }
       }
      }
     }
@@ -161,9 +165,6 @@
           height: 230px;
           margin: auto; 
          }
-         .address{
-           margin-left
-         }
        }
     }
   }
@@ -171,4 +172,3 @@
 
 
 }
- 
